--- a/package.json
+++ b/package.json
@@ -43,6 +43,9 @@
   "devDependencies": {
     "@types/node": "22.15.3",
     "@types/react": "19.1.2",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "typescript": "5.8.3"
   }
 }
