--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.821.0",
     "@aws-sdk/s3-request-presigner": "^3.821.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/sortable": "^10.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
     "@emotion/is-prop-valid": "^1.3.1",
     "@react-pdf/renderer": "^4.3.0",
     "@upsetjs/venn.js": "1.4.2",
@@ -38,7 +41,8 @@
     "reaviz": "16.0.4",
     "sass": "1.87.0",
     "socket.io-client": "4.8.1",
-    "sweetalert2": "11.19.1"
+    "sweetalert2": "11.19.1",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@types/node": "22.15.3",
